# asyncio-for-ynab

./: .openapi-generator-ignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml  mergify.yml  renovate.json
.openapi-generator/: FILES
asyncio_for_ynab/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
config/: openapi.yaml  spec.yaml
docs/: Account.md  AccountBase.md  AccountResponse.md  AccountResponseData.md  AccountsApi.md  AccountsResponse.md  AccountsResponseData.md  BulkResponse.md  BulkResponseData.md  BulkResponseDataBulk.md  BulkTransactions.md  CategoriesApi.md  CategoriesResponse.md  CategoriesResponseData.md  Category.md  CategoryBase.md  CategoryGroup.md  CategoryGroupWithCategories.md  CategoryResponse.md  CategoryResponseData.md  CurrencyFormat.md  DateFormat.md  ErrorDetail.md  ErrorResponse.md  ExistingCategory.md  ExistingTransaction.md  HybridTransaction.md  HybridTransactionsResponse.md  HybridTransactionsResponseData.md  MoneyMovement.md  MoneyMovementBase.md  MoneyMovementGroup.md  MoneyMovementGroupsResponse.md  MoneyMovementGroupsResponseData.md  MoneyMovementsApi.md  MoneyMovementsResponse.md  MoneyMovementsResponseData.md  MonthDetail.md  MonthDetailBase.md  MonthDetailResponse.md  (+87 more)
test/: test_account.py  test_account_base.py  test_account_response.py  test_account_response_data.py  test_account_type.py  test_accounts_api.py  test_accounts_response.py  test_accounts_response_data.py  test_bulk_response.py  test_bulk_response_data.py  test_bulk_response_data_bulk.py  (+121 more)
(+145 files in other folders)
