[metadata]
name = asyncio_for_ynab
version = 1.85.0
description = Unofficial asyncio client for the YNAB API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mxr/asyncio-for-ynab
author = Max R
author_email = mxr@users.noreply.github.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
keywords = ynab, budget, asyncio, openapi, httpx

[options]
packages = find:
install_requires =
    httpx>=0.28.1
    pydantic>=2.11
    python-dateutil>=2.8.2
    typing-extensions>=4.7.1
python_requires = >=3.10

[options.extras_require]
dev =
    aioresponses
    covdefaults>=2.1.0
    coverage
    pytest
    pytest-asyncio

[options.package_data]
* =
    py.typed

[bdist_wheel]
universal = True

[tox:tox]
envlist = py310,py311,py312,py313,py314,pre-commit

[testenv]
extras = dev
commands =
    coverage erase
    coverage run -m pytest {posargs:test test_custom}
    coverage report

[coverage:run]
plugins = covdefaults

[testenv:pre-commit]
skip_install = true
deps = pre-commit
commands = pre-commit run --all-files --show-diff-on-failure
